# epd_color_display

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  app.py  compose.yml  core.py  docker-compose.dev.yml  docker-compose.yml  epd_color.py  gemini_client.py  image_utils.py  main.py  prompt.md  pyproject.toml
.claude/: settings.local.json
_backup/: Dockerfile  compose.yml  core.py  main.py
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: websocket.py
backend/app/api/routes/: generate.py  prompts.py  system.py
backend/app/core/: gemini.py  generator.py  scheduler.py
backend/app/hardware/: epd.py
backend/app/models/: schemas.py
backend/app/utils/: image.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: ConnectionIndicator.vue  GenerateButton.vue  ImageGallery.vue  PromptEditor.vue  PromptHistory.vue  StatusDisplay.vue
frontend/src/components/common/: ConnectionIndicator.vue
frontend/src/components/editor/: PromptEditor.vue  PromptHistory.vue
frontend/src/components/gallery/: ImageCard.vue  ImageGallery.vue  (+1 more)
frontend/src/composables/: useApi.ts  useStatus.ts  useWebSocket.ts
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: connectionStore.ts  imageStore.ts  promptStore.ts  statusStore.ts
frontend/src/types/: index.ts
frontend/src/views/: EditorView.vue  GalleryView.vue
templates/: index.html
(+4 files in other folders)
