[project]
name = "epd-color-display-backend"
version = "1.0.0"
description = "FastAPI backend for E-Paper Display Image Generator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "google-genai>=0.2.0",
    "pillow>=10.0.0",
    # Hardware dependencies (only needed on Raspberry Pi)
    # "gpiozero>=2.0.1",
    # "spidev>=3.8",
]

[project.optional-dependencies]
hardware = [
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0",
    "spidev>=3.8",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
